# pc_course

./: .gitignore  db.sql
pc_course_client/: CMakeLists.txt  main.cpp
pc_course_client/Accountant/Ui/: AccountantPanel.cpp  AccountantPanel.h  AccountantPanel.ui
pc_course_client/Admin/Models/: UsersModel.cpp  UsersModel.h
pc_course_client/Admin/Ui/: AdminPanel.cpp  AdminPanel.h  AdminPanel.ui
pc_course_client/Employee/Models/: CustomersModel.cpp  CustomersModel.h  ItemsModel.cpp  ItemsModel.h
pc_course_client/Employee/Ui/: EmployeePanel.cpp  EmployeePanel.h  EmployeePanel.ui  NewItemDialog.cpp  NewItemDialog.h  NewItemDialog.ui
pc_course_client/Login/Ui/: LoginWindow.cpp  LoginWindow.h  LoginWindow.ui
pc_course_client/Utils/: LuaConf.hpp  MessageBox.hpp  Model.hpp  NoReplace.hpp  Requests.hpp  ServerConnection.cpp  ServerConnection.h  Settings.hpp  User.hpp
pc_course_server/: AsioDefs.hpp  CMakeLists.txt  Connection.cpp  Connection.h  DatabaseQuery.hpp  LuaConfSerialize.hpp  Request.hpp  Server.cpp  Server.h  ServerSettings.hpp  main.cpp
